# pytorch-multihead

./: README.md  note.txt  pyproject.toml  train.py
encoder_model/: __init__.py  data.py  json_utils.py  model.py
