[tool.poetry]
name = "custom_encoder"
version = "0.1.0"
description = ""
authors = ["Kirby Nitzschke <nitzschkekirby@gmail.com>"]
# readme = "README.md"
packages = [{include = "encoder_model"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.0"
huggingface-hub = "^0.20.3"
scikit-learn = "^1.5.0"
transformers = "^4.37.2" 
accelerate = "^0.27.0"
autoawq = "^0.1.7"
bitsandbytes = "^0.41.3.post2"
datasets = "^2.15.0"
peft = "^0.7.1"
tensorboard = "^2.15.2" 
torch = "^2.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ipykernel = "^6.29.2"
pytest = "^8.0.0"
